// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text  /> should match snapshot 1`] = `
.c0 .tooltip-content.sirius-tooltip {
  border-radius: 0;
  padding: 0.2857rem 0.7143rem;
  font-weight: 400;
  border-radius: 0;
  font-size: 12px;
  color: #cdcdcd;
  line-height: 1.1429rem;
}

.c1 .text.sirius-text {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  vertical-align: bottom;
  max-width: 40px;
  display: inline-block;
  cursor: pointer;
}

<div
  class="c0"
>
  <div
    class="jsx-64609884"
  >
    <div
      class="jsx-64609884 tooltip "
    >
      <span
        class="c1"
      >
        <p
          class="jsx-3390086683  text sirius-text"
        >
          <span>
            1234567890
          </span>
        </p>
      </span>
    </div>
  </div>
</div>
`;

exports[`<Text  /> should match snapshot when set maxCount 1`] = `
.c0 .tooltip-content.sirius-tooltip {
  border-radius: 0;
  padding: 0.2857rem 0.7143rem;
  font-weight: 400;
  border-radius: 0;
  font-size: 12px;
  color: #cdcdcd;
  line-height: 1.1429rem;
}

.c1 .text.sirius-text {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  vertical-align: bottom;
  display: inherit;
  cursor: pointer;
}

<div
  class="c0"
>
  <div
    class="jsx-64609884"
  >
    <div
      class="jsx-64609884 tooltip "
    >
      <span
        class="c1"
      >
        <p
          class="jsx-3390086683  text sirius-text"
        >
          12345...
        </p>
      </span>
    </div>
  </div>
</div>
`;
